--- a/WordCounter.Tests/WordCounter.Tests.csproj
+++ b/WordCounter.Tests/WordCounter.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
@@ -10,7 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\WordCounter\WordCounter.csproj" />  
+    <ProjectReference Include="..\WordCounter\WordCounter.csproj" />
   </ItemGroup>
 
 </Project>
